Add the action to get random query.

--- a/web/app/views/index.scala.html
+++ b/web/app/views/index.scala.html
@@ -3,7 +3,7 @@
 @import helper._
 @import tags._
 
-@main("Wikipediaで6回リンク辿ればいけるか調べる(仮)") {
+@main("Wikipediaで6回リンク辿ればいけるか調べる(仮)", Some("index.js")) {
     <header>
         <h1><span>P</span>edia<span>R</span>oute.com</h1>
         <p>Wikipediaで6回リンク辿ればいけるか調べる(仮)</p>
