--- a/web/app/views/main.scala.html
+++ b/web/app/views/main.scala.html
@@ -1,4 +1,4 @@
-@(title: String)(content: Html)
+@(title: String, javascript: Option[String] = None)(content: Html)
 
 <!DOCTYPE html>
 <html>
@@ -7,6 +7,9 @@
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
         <script src="@routes.Assets.at("javascripts/jquery-1.9.0.min.js")" type="text/javascript"></script>
+        @if(javascript.isDefined) {
+        <script src="@routes.Assets.at("javascripts/" + javascript.get)" type="text/javascript"></script>
+        }
     </head>
     <body>
         @content
