--- a/web/app/views/index.scala.html
+++ b/web/app/views/index.scala.html
@@ -24,6 +24,8 @@
     <aside id="history">
         <h2>更新履歴</h2>
         <dl>
+            <dt><tile>2013/03/10 17:00</time>ごろ</dt>
+            <dd>2013/03/07のデータで作り直し</dd>
             <dt><time>2011/08/31 02:00</time>ごろ</dt>
             <dd>HTML書き直し。大文字小文字の違いしかないページ名は同じ扱いにした。</dd>
             <dt><time>2011/08/30 04:30</time>ごろ</dt>
