--- a/web/app/views/search.scala.html
+++ b/web/app/views/search.scala.html
@@ -12,7 +12,7 @@
             <article>
                 <ol start="0">
                 @for(word <- wordList) {
-                    <li>@wikipedia_link(word)</word>
+                    <li>@wikipedia_link(word)</li>
                 }
                 </ol>
             </article>
